feat : header component styling & login page mapping

--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,1 +1,18 @@
-<div>dfdfdfdfdf</div>
+<div class="header">
+    <div class="header-wrap">
+        <div class="logo">
+            <a href="/">오늘 뭐먹죠?</a>
+        </div>
+        <div class="link">
+            <div class="sign-in-link">
+                <a href="./login">로그인</a>
+            </div>
+            <div class="sign-up-link">
+                <a href="./register">회원가입</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- header.js -->
+<script defer src="../../static/js/header.js"></script>
