--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,7 +1,7 @@
 <div class="header">
     <div class="header-wrap">
         <div class="logo">
-            <a href="/">오늘 뭐먹죠?</a>
+            <a href="/">🍕오늘 뭐먹죠</a>
         </div>
         <div class="link">
             <div class="sign-in-link">
