feat: main component linked in index

--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -5,10 +5,10 @@
         </div>
         <div class="link">
             <div class="sign-in-link">
-                <a href="./login">로그인</a>
+                <a href="/login">로그인</a>
             </div>
             <div class="sign-up-link">
-                <a href="./register">회원가입</a>
+                <a href="/register">회원가입</a>
             </div>
         </div>
     </div>
