--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../static/styles/reset.css" />
         <link rel="stylesheet" href="../static//styles/common.css" />
         <link rel="stylesheet" href="../static/styles/header.css" />
+        <link rel="stylesheet" href="../static/styles/main.css" />
 
         <!-- bootstrap -->
         <link
@@ -30,9 +31,10 @@
         {% include "./components/header.html" %}
 
         <!-- Content -->
-        <section id="main">
-            {% if component_name == 'login' %} {% include
-            "./components/login.html" %} {% endif %}
+        <section id="content">
+            {% if component_name == 'main' %} {% include
+            "./components/main.html" %} {% elif component_name == 'login' %} {%
+            include "./components/login.html" %} {% endif %}
         </section>
     </body>
 </html>
