--- a/templates/index.html
+++ b/templates/index.html
@@ -32,9 +32,10 @@
 
         <!-- Content -->
         <section id="content">
-            {% if component_name == 'main' %} {% include
-            "./components/main.html" %} {% elif component_name == 'login' %} {%
-            include "./components/login.html" %} {% endif %}
+            {% if component_name == 'main' %} {% include "./components/main.html" %} 
+            {% elif component_name == 'login' %} {% include "./components/login.html" %} 
+            {% elif component_name == 'register' %} {% include "./components/register.html" %}
+            {% endif %}
         </section>
     </body>
 </html>
