--- a/templates/components/register.html
+++ b/templates/components/register.html
@@ -1,69 +1,79 @@
 <style>
-	 /* 섹션 크기 */
-	.bg-light{
-		height: 1053px;
-		padding-top:55px;
-		padding-bottom:75px;
-	}
-	.flex-fill.mx-xl-5.mb-2{
-		margin: 0 auto;
-		width : 700px;
-		padding-right: 7rem;
-		padding-left: 7rem;
-	}
-     /* 입력창  */
-	.container.py-4{
-		margin: 0 auto;
-		width : 503px;
-	}
-     /* 가입하기 */
-	.d-grid.gap-2{
-		padding-top: 30px;
-	}
-    
+    /* 섹션 크기 */
+    .bg-light {
+        height: 1053px;
+        padding-top: 55px;
+        padding-bottom: 75px;
+    }
+    .flex-fill.mx-xl-5.mb-2 {
+        margin: 0 auto;
+        width: 700px;
+        padding-right: 7rem;
+        padding-left: 7rem;
+    }
+    /* 입력창  */
+    .container.py-4 {
+        margin: 0 auto;
+        width: 503px;
+    }
+    /* 가입하기 */
+    .d-grid.gap-2 {
+        padding-top: 30px;
+    }
+
     /* 생년월일 */
-	.bir_yy,.bir_mm,.bir_dd{
-		width:160px;
-		display:table-cell;
-	}
-	.bir_mm+.bir_dd, .bir_yy+.bir_mm{
-		padding-left:10px;
-	}
+    .bir_yy,
+    .bir_mm,
+    .bir_dd {
+        width: 160px;
+        display: table-cell;
+    }
+    .bir_mm + .bir_dd,
+    .bir_yy + .bir_mm {
+        padding-left: 10px;
+    }
 </style>
 
-
 <script defer src="../../static/js/register.js"></script>
-
 
 <section class="bg-light">
     <div class="container py-4">
         <form>
             <div class="form-group">
+                <label for="user-id" class="form-label mt-4">닉네임</label>
+                <input type="text" class="form-control" id="user-nickname" />
+                <button type="button" class="btn btn-primary" onclick="user_nickname_check()">
+                    중복체크
+                </button>
+                <div id="nickname-check-msg"></div>
+            </div>
+            <div class="form-group">
                 <label for="user-id" class="form-label mt-4">아이디</label>
-                <input type="text" class="form-control" id="user-id" aria-describedby="emailHelp"/>
+                <input type="text" class="form-control" id="user-id" />
+                <button class="btn btn-primary" onclick="user_id_check()">중복체크</button>
             </div>
             <div class="form-group">
                 <label class="form-label mt-4" for="password">비밀번호</label>
-                <input type="password" class="form-control" id="password"/>
+                <input type="password" class="form-control" id="user-pw" />
             </div>
             <div class="form-group">
                 <label class="form-label mt-4" for="password">비밀번호 재확인</label>
-                <input type="password" class="form-control" id="password-check"/>
+                <input type="password" class="form-control" id="user-pw-check" />
                 <div class="invalid-feedback" id="check-msg"></div>
             </div>
             <div class="form-group">
                 <label for="user-name" class="form-label mt-4">이름</label>
-                <input type="text" class="form-control" id="user-name" aria-describedby="emailHelp"/>
-            </div> 
+                <input type="text" class="form-control" id="user-name" />
+            </div>
             <div class="form-group">
                 <label for="user-email" class="form-label mt-4">이메일</label>
-                <input type="text" class="form-control" id="user-email" aria-describedby="emailHelp"/>
-            </div>                     
-            <div class="d-grid gap-2">
-                <button class="btn btn-primary btn-lg" type="button" onclick="register()">sign up</button>
+                <input type="text" class="form-control" id="user-email" />
             </div>
-
+            <div class="d-grid gap-2">
+                <button class="btn btn-primary btn-lg" type="button" onclick="register()">
+                    sign up
+                </button>
+            </div>
         </form>
     </div>
 </section>
-
