--- a/templates/components/register.html
+++ b/templates/components/register.html
@@ -39,16 +39,23 @@
     <div class="container py-4">
         <form>
             <div class="form-group">
+                <label for="user-nickname" class="form-label mt-4">닉네임</label>
+                <input type="text" class="form-control" id="user-nickname" aria-describedby="emailHelp"/>
+                <button class="btn btn-primary" onclick="user_nickname_check()">중복확인</button>
+                <div id="nickname-check-msg"></div>
+            </div>
+            <div class="form-group">
                 <label for="user-id" class="form-label mt-4">아이디</label>
                 <input type="text" class="form-control" id="user-id" aria-describedby="emailHelp"/>
+                <button class="btn btn-primary" onclick="user_id_check()">중복확인</button>
             </div>
             <div class="form-group">
                 <label class="form-label mt-4" for="password">비밀번호</label>
-                <input type="password" class="form-control" id="password"/>
+                <input type="password" class="form-control" id="user-pw"/>
             </div>
             <div class="form-group">
                 <label class="form-label mt-4" for="password">비밀번호 재확인</label>
-                <input type="password" class="form-control" id="password-check"/>
+                <input type="password" class="form-control" id="user-pw-check"/>
                 <div class="invalid-feedback" id="check-msg"></div>
             </div>
             <div class="form-group">
