--- a/templates/components/register.html
+++ b/templates/components/register.html
@@ -1,37 +1,41 @@
 <style>
     /* 섹션 크기 */
-    .bg-light {
-        height: 1053px;
-        padding-top: 55px;
-        padding-bottom: 75px;
-    }
-    .flex-fill.mx-xl-5.mb-2 {
-        margin: 0 auto;
-        width: 700px;
-        padding-right: 7rem;
-        padding-left: 7rem;
-    }
-    /* 입력창  */
-    .container.py-4 {
-        margin: 0 auto;
-        width: 503px;
-    }
-    /* 가입하기 */
-    .d-grid.gap-2 {
-        padding-top: 30px;
-    }
+.bg-light {
+    height: 1053px;
+    padding-top: 55px;
+    padding-bottom: 75px;
+}
 
-    /* 생년월일 */
-    .bir_yy,
-    .bir_mm,
-    .bir_dd {
-        width: 160px;
-        display: table-cell;
-    }
-    .bir_mm + .bir_dd,
-    .bir_yy + .bir_mm {
-        padding-left: 10px;
-    }
+.flex-fill.mx-xl-5.mb-2 {
+    margin: 0 auto;
+    width: 700px;
+    padding-right: 7rem;
+    padding-left: 7rem;
+}
+
+/* 입력창  */
+.container.py-4 {
+    margin: 0 auto;
+    width: 503px;
+}
+
+/* 가입하기 */
+.d-grid.gap-2 {
+    padding-top: 30px;
+}
+
+/* 생년월일 */
+.bir_yy,
+.bir_mm,
+.bir_dd {
+    width: 160px;
+    display: table-cell;
+}
+
+.bir_mm+.bir_dd,
+.bir_yy+.bir_mm {
+    padding-left: 10px;
+}
 </style>
 
 <script defer src="../../static/js/register.js"></script>
@@ -41,13 +45,13 @@
         <form>
             <div class="form-group">
                 <label for="user-id" class="form-label mt-4">닉네임</label>
-                <input type="text" class="form-control" id="user-nickname" />
+                <input type="text" class="form-control" id="user-nickname" valid="default"/>
                 <button type="button" class="btn btn-primary" onclick="user_nickname_check()">중복체크</button>
                 <div id="nickname-check-msg"></div>
             </div>
             <div class="form-group">
                 <label for="user-id" class="form-label mt-4">아이디</label>
-                <input type="text" class="form-control" id="user-id" />
+                <input type="text" class="form-control" id="user-id" valid="default"/>
                 <button type="button" class="btn btn-primary" onclick="user_id_check()">중복체크</button>
                 <div id="id-check-msg"></div>
             </div>
