--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,7 @@
             {% elif component_name == 'login' %} {% include "./components/login.html" %} 
             {% elif component_name == 'write' %} {% include "./components/write.html" %} 
             {% elif component_name == 'register' %} {% include "./components/register.html" %}
+            {% elif component_name == 'post' %} {% include "./components/post.html" %}
             {% endif %}
         </section>
     </body>
