--- a/templates/components/login.html
+++ b/templates/components/login.html
@@ -13,20 +13,27 @@
         <div class="wrap">
             <div class="mytitle">
                 <h1>🍕오늘 뭐먹죠</h1>
-                <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="아이디">
-                    <label for="floatingInput">Email address</label>
+                <div class="IDPW">
+                    <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="아이디">
+                        <label for="floatingInput">아이디</label>
+                    </div>
+                    <div class="form-floating">
+                        <input type="password" class="form-control" id="floatingPassword" placeholder="비밀번호">
+                        <label for="floatingPassword">비밀번호</label>
+                    </div>
                 </div>
-                <div class="form-floating">
-                    <input type="password" class="form-control" id="floatingPassword" placeholder="비밀번호">
-                    <label for="floatingPassword">Password</label>
+                <div>
+                    <button class="loginbtn" type="button">로 그 인</button>
+                </div>    
+                <div class="twobtn">
+                    <div>
+                        <button class="signupbtn" type="button">회 원 가 입</button>
+                    </div>  
+                    <div>
+                        <button class="findpwbtn" type="button">비밀번호 찾기</button>
+                    </div>
                 </div>
-                <div class="d-grid gap-2 col-6 mx-auto">
-                    <button class="btn btn-primary" type="button">로그인</button>
-                </div>
-                <button type="button" class="btn btn-secondary btn-lg" disabled>회원가입</button>
-                <button type="button" class="btn btn-lg btn-primary" disabled>비밀번호찾기</button>
-            </div>
         </div>
     </div>
 </body>
