--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -1,7 +1,6 @@
 * {
-    font-family: 'Poor Story', cursive;
+    font-family: "Poor Story", cursive;
 }
-
 
 .mytitle {
     background-color: white;
@@ -23,7 +22,6 @@
     text-align: center;
 
     border-radius: 20px;
-
 }
 
 .wrap {
@@ -56,7 +54,6 @@
 
     border-radius: 5px;
     border: none;
-    
 
     width: 450px;
     height: 45px;
@@ -64,7 +61,7 @@
 }
 
 .twobtn {
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: space-between;
 }
@@ -88,7 +85,7 @@
     background-color: #ffeacd;
     color: black;
 
-    margin-right: 20px
+    margin-right: 20px;
 
     font-size: 1.5em;
 
