feat: login page-register link

--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -4,7 +4,7 @@
 
 .mytitle {
     background-color: white;
-    width: 90%;
+    width: 1000px;
     height: 40%;
     min-height: 600px;
     min-width: 135px;
