--- a/templates/components/login.html
+++ b/templates/components/login.html
@@ -24,7 +24,7 @@
             </div>
             <div class="twobtn">
                 <div>
-                    <button class="signupbtn" type="button">회 원 가 입</button>
+                    <button class="signupbtn" type="button" onclick="location.href='/register';">회 원 가 입</button>
                 </div>
                 <div>
                     <button class="findpwbtn" type="button">비밀번호 찾기</button>
