--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
         <!-- styles -->
         <link rel="stylesheet" href="../static/styles/reset.css" />
-        <link rel="stylesheet" href="../static//styles/common.css" />
+        <link rel="stylesheet" href="../static/styles/common.css" />
         <link rel="stylesheet" href="../static/styles/header.css" />
         <link rel="stylesheet" href="../static/styles/main.css" />
         <link rel="stylesheet" href="../static/styles/write.css" />
@@ -47,7 +47,8 @@
             {% if component_name == 'main' %} {% include "./components/main.html" %} {% elif
             component_name == 'login' %} {% include "./components/login.html" %} {% elif
             component_name == 'write' %} {% include "./components/write.html" %} {% elif
-            component_name == 'register' %} {% include "./components/register.html" %} {% endif %}
+            component_name == 'register' %} {% include "./components/register.html" %} {% elif
+            component_name == 'mypage' %} {% include "./components/mypage.html" %} {% endif %}
         </section>
     </body>
 </html>
