fix: file name & postlist mapping

--- a/templates/components/postlist.html
+++ b/templates/components/postlist.html
@@ -2,11 +2,13 @@
     <div class="main-wrap">
         <div class="main-menu">
             <div class="main-menu-left">dfdf</div>
+            {% if 'user-info' in session %}
             <div class="main-menu-right">
                 <a href="/write">
                     <div class="write-link-btn">글 쓰기</div>
                 </a>
             </div>
+            {% endif %}
         </div>
         <div class="main-content"></div>
     </div>
