--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="../static/styles/postlist.css" />
         <link rel="stylesheet" href="../static/styles/write.css" />
         <link rel="stylesheet" href="../static/styles/login.css" />
+        <link rel="stylesheet" href="../static/styles/post.css" />
 
         <!-- bootstrap -->
         <link
@@ -47,7 +48,8 @@
             {% if component_name == 'postlist' %} {% include "./components/postlist.html" %} {% elif
             component_name == 'login' %} {% include "./components/login.html" %} {% elif
             component_name == 'write' %} {% include "./components/write.html" %} {% elif
-            component_name == 'register' %} {% include "./components/register.html" %} {% endif %}
+            component_name == 'register' %} {% include "./components/register.html" %} {% elif
+            component_name == 'post' %} {% include "./components/post.html" %} {% endif %}
         </section>
     </body>
 </html>
