--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -1,56 +1,93 @@
-* {
-    font-family: "Poor Story", cursive;
+@font-face {
+    font-family: 'KOFIHDrLEEJWTTF-B';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2210-2@1.0/KOFIHDrLEEJWTTF-B.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+}
+@font-face {
+    font-family: "ONE-Mobile-POP";
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/ONE-Mobile-POP.woff")
+        format("woff");
+    font-weight: normal;
+    font-style: normal;
 }
 
-.mytitle {
+@media (max-width: 750px) {
+    .loginpage_background {
+        width: 100%;
+    }
+    
+    .loginpage_background .loginwrap {
+        width: 86%;
+    }
+
+    .loginpage_background .loginwrap .logintitle {
+        width: 70%;
+    }
+}
+
+/* @media (max-height: 1080px) {
+    .loginpage_background {
+        height: 100%;
+    }
+} */
+
+.loginpage_background {
+    width: 100%;
+    height: 1000px;
+
+    padding : 0px 30px 30px 30px ;
+}
+
+.loginpage_background .loginwrap {
+    background-color: #ffeacd;
+    width: 750px;
+    height: 1000px;
+
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    margin: 70px auto;
+
+    border-radius: 25px;
+}
+
+.loginpage_background .loginwrap .logintitle {
     background-color: white;
-    width: 1000px;
-    height: 40%;
-    min-height: 600px;
-    min-width: 135px;
+    width: 590px;
+    height: 600px;
 
     display: block;
 
-    margin: 130px auto;
-    padding-top: 100px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 100px;
-
-    color: black;
+    margin: 100px auto;
+    padding: 100px 40px 100px 40px;
 
     text-align: center;
+    font-weight: normal;
+    font-family: "ONE-Mobile-POP";
 
-    border-radius: 20px;
+    border-radius: 35px;
 }
 
-.wrap {
-    background-color: #ffeacd;
-    width: 60%;
-    height: 80%;
-    min-height: 600px;
-    min-width: 135px;
-
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: center;
-    gap: 30px;
-    margin: 50px auto;
-
-    border-radius: 20px;
+.loginpage_background .loginwrap .logintitle a {
+    color: black;
 }
 
-.IDPW {
+.loginpage_background .loginwrap .logintitle .IDPW {
     margin-top: 50px;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
+
+    font-weight: 700;
+    font-family: 'KOFIHDrLEEJWTTF-B';
 }
 
-.loginbtn {
+.loginpage_background .loginwrap .logintitle .loginbtn {
     background-color: #ffeacd;
     color: black;
 
-    font-size: 1.5em;
+    font-weight: 700;
+    font-family: 'KOFIHDrLEEJWTTF-B';
+    font-size: 1.2em;
 
     border-radius: 5px;
     border: none;
@@ -60,19 +97,21 @@
     margin-bottom: 20px;
 }
 
-.twobtn {
+.loginpage_background .loginwrap .logintitle .signup_find_btn {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 
-.signupbtn {
+.loginpage_background .loginwrap .logintitle .signup_find_btn .signupbtn {
     background-color: #ffeacd;
     color: black;
 
-    margin-left: 10px;
+    margin-right: 15px;
 
-    font-size: 1.5em;
+    font-weight: 700;
+    font-family: 'KOFIHDrLEEJWTTF-B';
+    font-size: 1.2em;
 
     border-radius: 5px;
     border: none;
@@ -81,13 +120,15 @@
     height: 45px;
 }
 
-.findpwbtn {
+.loginpage_background .loginwrap .logintitle .signup_find_btn .findpwbtn {
     background-color: #ffeacd;
     color: black;
 
-    margin-right: 20px;
+    margin-left: 15px;
 
-    font-size: 1.5em;
+    font-weight: 700;
+    font-family: 'KOFIHDrLEEJWTTF-B';
+    font-size: 1.2em;
 
     border-radius: 5px;
     border: none;
