--- a/templates/components/login.html
+++ b/templates/components/login.html
@@ -1,37 +1,41 @@
-<div class="background">
-    <div class="wrap">
-        <div class="mytitle">
-            <h1>🍕오늘 뭐먹죠</h1>
-            <div class="IDPW">
-                <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="user-id" placeholder="아이디" />
-                    <label for="user-id">아이디</label>
-                    <div id="login-err-msg-id"></div>
-                </div>
-                <div class="form-floating">
-                    <input
-                        type="password"
-                        class="form-control"
-                        id="user-pw"
-                        placeholder="비밀번호"
-                    />
-                    <label for="user-pw">비밀번호</label>
-                    <div id="login-err-msg-pw"></div>
-                </div>
-            </div>
-            <div>
-                <button class="loginbtn" type="button" onclick="login_user()">로 그 인</button>
-            </div>
-            <div class="twobtn">
-                <div>
-                    <button class="signupbtn" type="button" onclick="location.href='/register';">회 원 가 입</button>
+    <div class="loginpage_background">    
+        <div class="loginwrap">
+            <div class="logintitle">
+                <h1><a href="/">🍕오늘 뭐먹죠</a></h1>
+                <div class="IDPW">
+                        <div class="form-floating mb-3">
+                            <input type="email" class="form-control" id="user-id" placeholder="아이디" />
+                            <label for="user-id">아이디</label>
+                            <div id="login-err-msg-id"></div>
+                        </div>
+                        <div class="form-floating">
+                            <input
+                                type="password"
+                                class="form-control"
+                                id="user-pw"
+                                placeholder="비밀번호"
+                            />
+                            <label for="user-pw">비밀번호</label>
+                            <div id="login-err-msg-pw"></div>
+                        </div>
                 </div>
                 <div>
-                    <button class="findpwbtn" type="button">비밀번호 찾기</button>
+                    <button class="loginbtn" type="button" onclick="login_user()">로 그 인</button>
                 </div>
+                <div class="signup_find_btn">
+                    <div>
+                        <button class="signupbtn" type="button" onclick="location.href='/register';">회 원 가 입</button>
+                    </div>
+                    <div>
+                        <button class="findpwbtn" type="button">비밀번호 찾기</button>
+                    </div>
+                </div>
+                    <pre>
+    
+                        <h1>🍔    🍖    🥧    🎂</h1>
+                    </pre>
             </div>
         </div>
     </div>
-</div>
 
 <script defer src="../../static/js/login.js"></script>
