--- a/static/styles/post.css
+++ b/static/styles/post.css
@@ -49,6 +49,37 @@
     height: auto !important;
 }
 
+.post-btn {
+    width: 1320px;
+    margin: 2rem auto;
+
+    display: flex;
+    justify-content: space-between;
+}
+
+.post-btn button {
+    border: 2px solid coral;
+    padding: 0.75rem 1.25rem;
+    border-radius: 10px;
+    font-weight: bold;
+    box-sizing: border-box;
+}
+
+.post-btn .post-main-btn {
+    border: 2px solid burlywood;
+    color: #ffffff;
+    background: burlywood;
+}
+
+.post-btn .post-edit-btn {
+    color: coral;
+    background: transparent;
+}
+.post-btn .post-delete-btn {
+    color: #ffffff;
+    background-color: coral;
+}
+
 @media (max-width: 1320px) {
     .detail-wrap {
         width: 100%;
@@ -71,5 +102,15 @@
     }
     .detail-content-wrap .ql-editor img {
         width: 100%;
+    }
+
+    .post-btn {
+        width: 100%;
+    }
+    .post-btn .post-delete-btn,
+    .post-btn .post-main-btn,
+    .post-btn .post-edit-btn {
+        padding: 0.5rem 0.75rem;
+        font-size: 0.75rem;
     }
 }
