--- a/templates/components/post.html
+++ b/templates/components/post.html
@@ -1,3 +1,4 @@
+<!-- flask에서 넘어온 게시글 번호를 들고있기 위한 input -->
 <input id="post-id" type="hidden" value="{{post_id}}" />
 
 <div class="detail-wrap">
@@ -14,6 +15,31 @@
     </div>
     <div class="detail-content-wrap">
         <div id="detail-content" class="ql-editor"></div>
+    </div>
+</div>
+
+<!-- 로그인 유저의 정보를 들고있기 위한 input -->
+<!-- 로그인이 되어있으면(세션이 있으면)? value에 user_id 없으면 빈 문자 -->
+<input
+    id="logined-user-id"
+    type="hidden"
+    value="{% if 'user-info' in session %}{{session['user-info']['user_id']}}{% endif %}"
+/>
+
+<div class="post-btn">
+    <div class="post-btn-left">
+        <button type="button" class="post-main-btn" onclick="location.href='/'">목록</button>
+    </div>
+
+    <div class="post-btn-right">
+        <button
+            type="button"
+            class="post-edit-btn"
+            onclick="location.href='/edit?post_id={{post_id}}'"
+        >
+            수정
+        </button>
+        <button type="button" class="post-delete-btn" onclick="post_delete()">삭제</button>
     </div>
 </div>
 
