--- a/templates/components/login.html
+++ b/templates/components/login.html
@@ -23,19 +23,16 @@
                     <button class="loginbtn" type="button" onclick="login_user()">로 그 인</button>
                 </div>
                 <div class="signup_find_btn">
-                    <div>
                         <button class="signupbtn" type="button" onclick="location.href='/register';">회 원 가 입</button>
-                    </div>
-                    <div>
                         <button class="findpwbtn" type="button">비밀번호 찾기</button>
-                    </div>
                 </div>
-                    <pre>
+                    <pre class="emoji">
     
                         <h1>🍔    🍖    🥧    🎂</h1>
-                    </pre>
+                    </pre>   
             </div>
         </div>
     </div>
+
 
 <script defer src="../../static/js/login.js"></script>
